<resources>
    <string name="app_name">QuickAID</string>
    <string name="title_activity_maps">QuickAID</string>
    <string name="hybrid_map">hybrid</string>
    <string name="registration_map">Login/Registration</string>
    <string name="satellite_map">satellite</string>
    <string name="Drivers">I\'m Drivers</string>
    <string name="Customers">I\'m Customers</string>
    <string name="terrain_map">terrain</string>
    <string name="action_sign_in_short">Register</string>

    <string name="email">Email</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="change_email">Change Email</string>

    <string name="change_password">Change Password</string>

    <string name="send_password_reset_email">Send Password reset email</string>

    <string name="remove_user">Remove user</string>

    <string name="new_pass">New Password</string>

    <string name="title_activity_profile">Firebase</string>

    <string name="title_activity_login">Sign in</string>

    <string name="hint_email">Enter your Email Address</string>

    <string name="hint_password">Password</string>

    <string name="hint_name">Fullname</string>

    <string name="btn_login">LOGIN</string>

    <string name="prompt_password">Please enter your password</string>

    <string name="btn_link_to_register">Register</string>

    <string name="btn_link_to_login">Already registered. Login Me!</string>

    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <string name="btn_forgot_password">Forgot password?</string>

    <string name="btn_reset_password">Reset Password</string>


    <string name="btn_back">

<![CDATA[<< Back]]>
</string>

    <string name="hint_new_email">New Email</string>

    <string name="btn_change">Change</string>

    <string name="btn_send">Send</string>

    <string name="btn_remove">Remove</string>

    <string name="btn_sign_out">Sign Out</string>

    <string name="lbl_forgot_password">Forgot password?</string>

    <string name="forgot_password_msg">Don\'t worry.We are here for help.\njust need your registered Email Id to sent you password reset instructions.</string>

    <string name="email_id">Email ID</string>
    <string name="welcome_to_QuickAID">Welcome to Quick AID.\n Already Registered User Login here..</string>
    <string name="dont_have_account">Don\'t have an Account?</string>

    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_profile">My Profile</string>
    <string name="nav_accept_request">Accept request</string>
    <string name="nav_raised_request">My Raised Request</string>
    <string name="nav_donation_history">Donation History</string>
    <string name="nav_past_request">Past Request</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_hospital_blood_bank">Hospital and Blood Banks</string>
    <string name="nav_become_a_volunteer">Become a volunteer</string>
    <string name="nav_refer_friend">Refer Friend</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_feedback">FeedBack</string>
    <string name="nav_our_team">Our Teams</string>
    <string name="nav_rate_us">Rate us</string>
    <string name="nav_privacy">Privacy Policy</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>My Profile</item>
        <item>Accept request</item>
        <item>My Raised Request</item>
        <item>Donation History</item>
        <item>Past Request</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_driver_map">Map</string>


    //testing-08.01.019
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="full_name">full name</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Registration</string>
</resources>
