<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView

            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/logoforintro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/welcome_to_QuickAID"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/email"
            android:layout_width="330dp"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="10sp" />


        <EditText

            android:id="@+id/password"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/padlock"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="10sp" />


        <!--forget password-->
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="10sp" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="330dp"
            android:layout_height="30dp"
            android:layout_margin="10dip"
            android:background="@drawable/button_round"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />


        <!-- Link to Login Screen -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/dont_have_account"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="330dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/button_round"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="10dp"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="162dp" />

</RelativeLayout>
